Removing second logging of Game Saved announcement when changing locations (saved on leaving and again on entering new location); fixing sizing of char info panel on smaller screens and border of char info and creature info panels on smaller screens

--- a/client/src/css/ui.css
+++ b/client/src/css/ui.css
@@ -1872,7 +1872,8 @@ select {
 	}
 
 	.character-info-container {
-		grid-area: turnInfo / characterInfo / characterInfo / creatureInfo;
+		grid-area: characterInfo / characterInfo / characterInfo / creatureInfo;
+		min-height: unset;
 		border-radius: 0;
 		border: 0;
 	}
@@ -1962,9 +1963,6 @@ select {
 	}
 
 	.character-info-container {
-		border: 2px solid seagreen;
-		border-left: 0;
-		border-radius: 0;
 		padding: 10px;
 	}
 
@@ -2077,11 +2075,6 @@ select {
 	#responses-container {
 		width: 100%;
 		margin: 0;
-	}
-
-	.character-info-container, .creature-info-container {
-		border-top: 2px solid seagreen;
-		border-bottom: 2px solid seagreen;
 	}
 
 	.character-info-container {
